tests/snapshots/lib__snapshots__legacy_filter@parse_spec_valid.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=error,crate1::mod2,crate2=debug"
---
Filter {
    scope: ThreadLocal { local_data: None },
    statics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [
                    StaticDirective {
                        target: Some(
                            "crate1::mod2",
                        ),
                        fields: [],
                        level: LevelFilter::TRACE,
                    },
                    StaticDirective {
                        target: Some(
                            "crate1::mod1",
                        ),
                        fields: [],
                        level: LevelFilter::ERROR,
                    },
                    StaticDirective {
                        target: Some(
                            "crate2",
                        ),
                        fields: [],
                        level: LevelFilter::DEBUG,
                    },
                ],
            },
        },
        level: LevelFilter::TRACE,
    },
    dynamics: DirectiveSet {
        directives: SortedSet {
            set: SortedVec {
                vec: [],
            },
        },
        level: LevelFilter::OFF,
    },
    by_id: RwLock {
        data: {},
        poisoned: false,
        ..
    },
    by_cs: RwLock {
        data: {},
        poisoned: false,
        ..
    },
}
