tests/snapshots/lib__snapshots__legacy_report@big-regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "/(?:){4294967295}"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidTarget

  ⚠ invalid target specified
   ╭────
 1 │ /(?:){4294967295}
   · ─────────────────
   ╰────

