tests/snapshots/lib__snapshots__legacy_report@invalid-filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate::target=warn/[0-9]/"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate::target=warn/[0-9]/
   ·               ───────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

