tests/snapshots/lib__snapshots__legacy_report@invalid-regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate::target=warn/[[]"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate::target=warn/[[]
   ·               ────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

