tests/snapshots/lib__snapshots__legacy_report@pain.env_filter.snap
---
source: tests/snapshots.rs
expression: "target1[span1],[span2]target2,[span3][span4],[[[[[[span5],[{field1!!!!!!!!!field2=val}]"
---
(no warnings)
