tests/snapshots/lib__snapshots__legacy_report@parse_spec_blank_level_isolated_blank_comma.env_filter.snap
---
source: tests/snapshots.rs
expression: "     ,"
---

  × some directives had no effect

Error: 
  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::legacy::InvalidTarget

  ⚠ invalid target specified
   ╭────
 1 │      ,
   · ─────
   ╰────

